refactor: resolve CODE_HEALTH_Opus findings (dead code, SOLID, consistency)
Clears the verified codebase-health audit in one pass. Behavior-preserving:
mvn -B verify green (158 core + 20 web IT tests), and a CLI self-scan JSON
diff is byte-identical before/after (no MetricsExport contract or metric drift).
Dead-code removals were first proven unreachable at runtime via instrumentation.

Highlights:
- fix: guard empty aic-check.yaml NPE in CheckConfigLoader (+test)
- remove runtime-proven dead code: ProjectPathTraverser.findPackages,
  PackageMetricsCalculator(Path) overload, and the JavaClassAnalyzer
  bytecode-delegation methods; migrate their tests to ProjectModel views
- rename JavaClassAnalyzer -> SpringBootAnnotationScanner (SRP); drop the
  concrete analyzer field from PackageMetricsCalculator (DIP)
- rename inverted exclusion flag disabled -> enabled (props/yaml/Defaults/tests)
- introduce RawModuleMetrics record (data clumps) + PackageMetrics.of factory
- honor ArchSpec.ignoreUnmatched (emit `unmatched` violations) (+tests)
- BannedApiRule.Kind yamlKey() dispatch; decompose analyzeClassFile,
  ThresholdEvaluator.evaluate, ArchSpec.fromYaml, CheckConfigLoader.resolve
- CommonPrefixRootPackageResolver returns null on I/O error (LSP)
- consistency: PackageScannerController constructor injection, CLI version
  from jar manifest, .toList(), explicit imports
- extract shared web TestProjectFixtures (fixes latent cyclic-name divergence)
- docs: architecture-checks ignoreUnmatched; add audit + assessment reports

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>